# spdx-checker-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
src/spdx-checker-pre-commit/: main.py
src/spdx_checker_pre_commit/: main.py
