[project]
name = "spdx-checker-pre-commit"
description = "A pre-commit hook to check for SPDX license identifiers in files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tobias Stach" }]
version = "0.1.6"
dependencies = ["spdx-checker==0.1.18"]
requires-python = ">=3.11"

[project.scripts]
spdx_checker_pre_commit = "spdx_checker_pre_commit.main:main"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spdx_checker_pre_commit*"]

[tool.setuptools.package-dir]
"" = "src"